manifests/deployment.yml

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hello-k8s
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: hello-k8s
    spec:
      containers:
      - name: hello-k8s
        image: 064004006639.dkr.ecr.us-east-1.amazonaws.com/hello-k8s:04e90f85e2af92a278abb0fb01d4be9a9cffbf64
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
