manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: hello-k8s
